--- a/css/profile.css
+++ b/css/profile.css
@@ -100,7 +100,7 @@ nav .profile-link a {
   grid-column: 1;
   justify-self: right;
   width: 400px;
-  border: 4px solid rgba(255, 255, 255, 0.2);
+  border: 4px solid #25013f;
   border-radius: 50%;
   z-index: 3;
 }
@@ -231,6 +231,7 @@ nav .profile-link a {
   color: #fff;
   margin: 0 20px;
   padding: 10px;
+  width: 125px;
   border: 1px solid #b106b1;
   border-radius: 20px;
   transition: .5s;
@@ -248,7 +249,7 @@ nav .profile-link a {
   color: var(--rose-clare);
 }
 .border-gradient {
-  height: 30px;
+  height: 20px;
   background: linear-gradient(60deg, #3f036a, #b106b1);
 }
 
@@ -271,10 +272,11 @@ nav .profile-link a {
   width: 500px;
 }
 .portfolio-about--myself h2 {
-  font-size: 32px;
+  font-size: 36px;
 }
 .portfolio-about--myself p {
   max-width: 500px;
+  font-size: 20px;
   margin: 16px;
 }
 .portfolio-about--skills {
@@ -311,4 +313,119 @@ nav .profile-link a {
 }
 .skills-container .skill p {
   display: none;
+}
+
+/* ########## WORKS SECTION ########## */
+.portfolio-works {
+  width: 100%;
+  text-align: center;
+}
+.portfolio-works h1 {
+  font-size: 60px;
+}
+.works-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  width: 80%;
+}
+.work-card {
+  position: relative;
+  width: 300px;
+  margin: 20px;
+  height: 500px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #012d6ba4;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.work-card::before {
+  content: '';
+  position: absolute;
+  width: 150px;
+  height: 140%;
+  background: linear-gradient(#51e5ff, #b106b1);
+  animation: animateCard 4s linear infinite;
+  filter: blur(30px);
+}
+.work-card::after {
+  content: '';
+  position: absolute;
+  inset: 4px;
+  background: #000813;
+  border-radius: 16px;
+}
+@keyframes animateCard 
+{
+  0% 
+  {
+    transform: rotate(0deg);
+  }
+  100% 
+  {
+    transform: rotate(360deg);
+  }
+}
+.work-card--content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  z-index: 12;
+}
+.work-card--content img {
+  width: 300px;
+  border-radius: 10px;
+}
+.work-card--content h2 {
+  font-size: 30px;
+}
+.work-card--content a {
+  color: var(--rose-clare);
+  font-size: 20px;
+  padding: 10px;
+  width: 70%;
+  align-self: center;
+  margin-top: 20px;
+  border: 1px solid #b106b1;
+  border-radius: 10px;
+  transition: .5s;
+  position: absolute;
+  bottom: 20px;
+}
+.work-card--content a:hover {
+  color: black;
+  background: #b106b1;
+}
+
+/* Contactp */
+.portfolio-contact {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.portfolio-contact h1 {
+  font-size: 40px;
+}
+.portfolio-contact p {
+  font-size: 20px;
+}
+.redes-contact {
+  height: 100px;
+}
+
+/* FOOTER */
+footer {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(180deg, #3f036a, #b106b1 );
+  text-align: center;
+}
+footer p {
+  font-size: 20px;
 }
